# backend

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  generata_did.sh
sns/: sns_init_template.yaml  sns_init_test_flight.yaml
sns/scripts/: add_canister_hot_key.sh  cast_sns_vote.sh  cleanup.sh  constants.sh  create_initial_proposals.sh  launch_test_flight_locally.sh  register_generic_proposal.sh  setup_test_flight.sh  test_proposals.sh  upgrade_canister.sh
sns/scripts/proposals/: add_canister_hot_key.sh  custom_proposal_project_voting.sh  custom_proposal_update_canister_config.sh  execute_proposal_project_voting.sh  execute_proposal_update_canister_config.sh  (+4 more)
src/icvc_backend/: Cargo.toml  icvc_backend.did
src/icvc_backend/src/: lib.rs  repository.rs
src/icvc_backend/src/domains/: mod.rs
src/icvc_backend/src/domains/canister_management/: controller.rs  service.rs  types.rs  types_storage.rs
src/icvc_backend/src/domains/core/: mod.rs  service.rs  types.rs  types_storage.rs
src/icvc_backend/src/domains/icvc_configuration/: constants.rs  controller.rs  mod.rs  service.rs  types.rs  types_storage.rs
src/icvc_backend/src/domains/project/: controller.rs  service.rs  types.rs  types_storage.rs
src/icvc_backend/src/domains/sns_integration/: controller.rs  mod.rs  service.rs  types.rs  types_sns_governance.rs
src/icvc_backend/src/domains/step/: controller.rs  service.rs  types.rs  types_storage.rs
src/icvc_backend/src/domains/user/: controller.rs  mod.rs  service.rs  types.rs  types_storage.rs
src/icvc_backend/src/utils/: authenticator.rs
(+8 files in other folders)
