[package]
name = "icvc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6.3"
ic-cdk-timers = "0.7.0"
serde = {version= "1.0.197", features= ["derive"]}
serde_json = "1.0"
hex = "0.4.3"

[dev-dependencies]
pocket-ic = "3.1.0"
serde_bytes = "0.11.4"
